--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "postinstall": "npm run prod"
+        "postinstall": "npm run prod",
+        "heroku-postbuild": "npm run production"
     },
     "devDependencies": {
         "axios": "^0.21",
@@ -24,5 +25,8 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
+    },
+    "engines": {
+        "node": "12.x"
     }
 }
