--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "prod": "npm run production",
         "production": "mix --production",
         "postinstall": "npm run prod",
+        "postinstall": "npm run production",
+        "heroku-prebuild": "npm install -f",
         "heroku-postbuild": "npm run production"
     },
     "devDependencies": {
@@ -25,8 +27,5 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
-    },
-    "engines": {
-        "node": "12.x"
     }
 }
